--- a/src/main/resources/configuration_local.yaml
+++ b/src/main/resources/configuration_local.yaml
@@ -10,6 +10,7 @@ security.datasource:
   password: ENC(vNq9+oOFXPNeXnQwwcPWWjMCgjNMOS5z2tt1TkE7WVxXK4bib+K8/w==)
   driverclassname: com.mysql.cj.jdbc.Driver
 
+server.port: 8443
 server.ssl.key-store-type: PKCS12
 server.ssl.key-store: classpath:ssl/keystore/jsquad.pfx
 server.ssl.key-store-password: ENC(M5JhYsUTMq6n1OKArpvF+TvuBjQTDO+/)
