--- a/src/main/resources/schema/OpenBankAPIv1.yaml
+++ b/src/main/resources/schema/OpenBankAPIv1.yaml
@@ -12,6 +12,45 @@ servers:
 - url: https://localhost:8443
   description: Local OpenBank API server.
 paths:
+  /api/get/client/info/:
+    get:
+      summary: Get client by client request body
+      description: Get the ClientAPI response object with uniqueue personal identification
+        number as part of the request body.
+      operationId: getClientInformationByRequestBody
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ClientRequest'
+      responses:
+        200:
+          description: The client
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ClientApi'
+        400:
+          description: Invalid personal identification number
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: Invalid personal identification number.
+        404:
+          description: Client not found.
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: Client not found.
+        500:
+          description: Severe system failure has occured!
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: Severe system failure has occured!
   /api/client/info/{personIdentification}:
     get:
       summary: Get client by person identification number
@@ -186,6 +225,16 @@ components:
           example: john.doe@mail.com
       description: PersonAPI contains person's firstname, lastname and email address
         information.
+    ClientRequest:
+      required:
+      - personIdentificationNumber
+      type: object
+      properties:
+        personIdentificationNumber:
+          type: string
+          description: The client person identification number.
+          example: "191212121212"
+      description: The client request body.
     DateTime:
       required:
       - dateTime
