--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<stax.version>1.7.8</stax.version>
 		<saaj-impl.version>1.3.28</saaj-impl.version>
 		<soap-api.version>1.4.0</soap-api.version>
+		<springdoc.openapi.version>1.1.49</springdoc.openapi.version>
 	</properties>
 
 	<dependencies>
@@ -64,6 +65,24 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-core</artifactId>
+			<version>${springdoc.openapi.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>1.25</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-core -->
@@ -473,6 +492,10 @@
 					</execution>
 				</executions>
 				<configuration>
+					<arguments>
+						<argument>-Xannotate</argument>
+					</arguments>
+					<extension>true</extension>
 					<sources>
 						<source>${project.basedir}/src/main/resources/schema/xsd/dummy.xsd</source>
 						<source>${project.basedir}/src/main/resources/schema/xsd/batch-status.xsd</source>
@@ -482,6 +505,21 @@
 				</configuration>
 				<dependencies>
 					<dependency>
+						<groupId>org.springdoc</groupId>
+						<artifactId>springdoc-openapi-core</artifactId>
+						<version>${springdoc.openapi.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.jvnet.jaxb2_commons</groupId>
+						<artifactId>jaxb2-annotate-plugin-test-annox-annotations</artifactId>
+						<version>1.0.0</version>
+					</dependency>
+					<dependency>
+						<groupId>org.jvnet.jaxb2_commons</groupId>
+						<artifactId>jaxb2-basics-annotate</artifactId>
+						<version>1.0.2</version>
+					</dependency>
+					<dependency>
 						<groupId>org.glassfish.jaxb</groupId>
 						<artifactId>jaxb-xjc</artifactId>
 						<version>2.3.2</version>
@@ -490,6 +528,11 @@
 						<groupId>com.sun.activation</groupId>
 						<artifactId>jakarta.activation</artifactId>
 						<version>1.2.1</version>
+					</dependency>
+					<dependency>
+						<groupId>org.jvnet.jaxb2_commons</groupId>
+						<artifactId>jaxb2-fluent-api</artifactId>
+						<version>3.0</version>
 					</dependency>
 				</dependencies>
 			</plugin>
