--- a/service/docker-compose.yaml
+++ b/service/docker-compose.yaml
@@ -46,46 +46,10 @@ services:
     image: flyway/flyway:6.0.6
     command: -url=jdbc:mysql://securitydb -schemas=security -user=root -password=${ROOT_PASSWORD} -connectRetries=60 migrate
     volumes:
-      - ./security/sql:/flyway/sql
+      - ../security/sql:/flyway/sql
     depends_on:
       securitydb:
         condition: service_healthy
-  grafana:
-    image: grafana/grafana
-    environment:
-      GF_SECURITY_ADMIN_USER: admin
-      GF_SECURITY_ADMIN_PASSWORD: test1234
-    depends_on:
-      prometheus:
-        condition: service_healthy
-    expose:
-      - "3000"
-    ports:
-      - 3000:3000
-    volumes:
-      - ./monitoring/grafana/provisioning:/etc/grafana/provisioning
-    healthcheck:
-      test: ["CMD-SHELL", "sh -c 'echo ready || exit 1'"]
-      interval: 10s
-      timeout: 10s
-      retries: 5
-  prometheus:
-    image: prom/prometheus
-    volumes:
-    - ./monitoring/prometheus/configs:/etc/prometheus
-    command: '--config.file=/etc/prometheus/prometheus.yaml'
-    depends_on:
-      openbank:
-        condition: service_healthy
-    expose:
-      - "9090"
-    ports:
-    - 9091:9090
-    healthcheck:
-      test: ["CMD-SHELL", "sh -c 'echo ready || exit 1'"]
-      interval: 10s
-      timeout: 10s
-      retries: 5
   openbank:
     build:
       context: .
