--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 	</modules>
 
 	<properties>
-		<build.helper.maven.version>3.0.0</build.helper.maven.version>
+        <build.helper.maven.version>3.0.0</build.helper.maven.version>
 		<exec.maven.plugin.version>1.6.0</exec.maven.plugin.version>
 		<flywaydb.version>5.2.4</flywaydb.version>
 		<gson.version>2.8.5</gson.version>
@@ -53,6 +53,7 @@
 		<jaxb2.basics.annotate.version>1.0.2</jaxb2.basics.annotate.version>
 		<jaxb2.fluent.version>3.0</jaxb2.fluent.version>
 		<jaxws.ri.version>2.3.0</jaxws.ri.version>
+		<logcaptor.version>2.2.0</logcaptor.version>
 		<maven.antrun.plugin.version>1.8</maven.antrun.plugin.version>
 		<maven.surefire.version>2.22.2</maven.surefire.version>
 		<micrometer.version>1.3.2</micrometer.version>
