--- a/service/pom.xml
+++ b/service/pom.xml
@@ -214,6 +214,12 @@
             <version>${okhttp3.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.hakky54</groupId>
+            <artifactId>logcaptor</artifactId>
+            <version>${logcaptor.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
